k8s/Network-policy/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: production

---
apiVersion: v1
kind: Namespace
metadata:
  name: internal
