k8s/Network-policy/pod_ns.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: prod
  namespace: production
  labels:
    env: prod
spec:
  containers:
    - name: prod
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: sit
  namespace: internal
  labels:
    env: internal
spec:
  containers:
    - name: sit
      image: nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
      ports:
        - containerPort: 80
          protocol: TCP
