k8s/Network-policy/Networkpolicy-ns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: Networkpolicy-ns
spec:
  podSelector:
    matchLabels:
      env: prod
  ingress:
    - from:
      namespaceSelector:
        matchLabels:
          env: production
