k8s/Network-policy/Networkpolicy-ns1.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-ns
  namespace: production
spec:
  podSelector:
    matchLabels:
      env: prod
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: production
      ports:
        - port: 80
          protocol: TCP


# THis network policy is Namespace selector based which allow traffic specific to defined namespace
