k8s/Network-policy/allow-rule1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
Metadata:
  name: db-access
spec:
  podSelector:
    matchLabels:
      tier: db
  ingress:
    - from:
        podSelector:
          matchLabels:
            tier: web
  - ports:
      port: 80
      protocol: TCP
