k8s/Network-policy/networkpolicy-noaccess.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-blockall
spec:
  podSelector:
    matchLabels:
      tier: web
  policyTypes:
    - Ingress
    - Egress

    # This will block all incoming and outgoing traffic to the  pod whose label matches with tier=web. Denies all traffic to a pod
